[package]
name = "gemini-multimodal-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "MCP server that gives visionless LLMs Gemini's eyes, ears, and video comprehension via `agy` CLI."
license = "Apache-2.0"
repository = "https://github.com/yuygfgg/gemini-multimodal-mcp"
keywords = ["mcp", "gemini", "antigravity", "vision", "multimodal"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
rmcp = { version = "1.7", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-std", "io-util", "time", "fs"] }
tempfile = "3"
base64 = "0.22"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
schemars = "1"
url = "2"
ffmpeg-next = "8.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
